--- a/src/css/actualizacion.css
+++ b/src/css/actualizacion.css
@@ -1,19 +1,13 @@
-h1{
-    text-decoration: underline;
-    color: #FFFFFF
+body{
+    padding: 12px;
+}
+#nombre{
+    width: 550px;
+}
+label{
+    color: #2e4a93;
 }
 button{
-    margin-top: 30px;
-}
-.titulo{
-    background-color: #2E4A93;
-    text-align: center;
-}
-table{
-    margin: auto;
-}
-button{
-    margin-left: 610px;
     box-shadow: 10px 10px 5px -8px rgba(0,0,0,0.75);
 -webkit-box-shadow: 10px 10px 5px -8px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 5px -8px rgba(0,0,0,0.75);
@@ -22,4 +16,8 @@ border-radius: 10px 10px 10px 10px;
 -webkit-border-radius: 10px 10px 10px 10px;
 -moz-border-radius: 10px 10px 10px 10px;
 padding: 6px;
+}
+.headers-section{
+    color: #9fc63b;
+    font-weight: bolder;
 }
